--- a/_posts/2018-02-08-gitpage搭建.MD
+++ b/_posts/2018-02-08-gitpage搭建.MD
@@ -9,4 +9,4 @@ categories: demo
 `测试一下markdown的用法。`
 
 
-![My helpful screenshot]({{ "/assets/desktop.png" | absolute_url }})
+![width='30px']({{ "/assets/desktop.png" | absolute_url }})
