--- a/_posts/2018-02-08-gitpage搭建.MD
+++ b/_posts/2018-02-08-gitpage搭建.MD
@@ -10,3 +10,15 @@ categories: demo
 
 
 ![]({{ "/assets/desktop.png" | absolute_url }})
+
+
+
+{% highlight ruby %}
+def show
+  @widget = Widget(params[:id])
+  respond_to do |format|
+    format.html # show.html.erb
+    format.json { render json: @widget }
+  end
+end
+{% endhighlight %}
