HIGH LIGHT JAVA

--- a/_posts/2018-02-08-gitpage搭建.MD
+++ b/_posts/2018-02-08-gitpage搭建.MD
@@ -13,12 +13,10 @@ categories: demo
 
 
 
-{% highlight ruby %}
-def show
-  @widget = Widget(params[:id])
-  respond_to do |format|
-    format.html # show.html.erb
-    format.json { render json: @widget }
-  end
-end
+{% highlight java %}
+public static final String DEMO_CONSTANT = "DEMO";
+public static void highlightDemo(String msg){
+    System.out.println(msg);
+}
+
 {% endhighlight %}
