--- a/_posts/2018-02-08-gitpage搭建.MD
+++ b/_posts/2018-02-08-gitpage搭建.MD
@@ -9,7 +9,7 @@ categories: demo
 `测试一下markdown的用法。`
 
 
-![]({{ "/assets/desktop.png" | absolute_url }})
+![]({{ "/assets/img/desktop.png" | absolute_url }})
 
 
 
