nexus private repo

--- a/_posts/2018-02-08-gitpage搭建.MD
+++ b/_posts/2018-02-08-gitpage搭建.MD
@@ -6,9 +6,10 @@ categories: demo
 
  
 
-!({{ "/assets/img/desktop.png" | absolute_url }})
+![]({{ "/assets/img/desktop.png" | absolute_url }})
 
- 
+
+
 {% highlight java %}
 public static final String DEMO_CONSTANT = "DEMO";
 public static void highlightDemo(String msg){
